tests/NormalTests/paczka1/fuzzy1/56046650.err
Error in line 11: MqdLx6Ha A699 71,8
Error in line 4: qb7fF A991 44,2
Error in line 18: qb7fF A699 26,6
Error in line 21: Lnuk A991 93,6
Error in line 17: 1X6WhZ A41 19,4
Error in line 31: 1X6WhZ A991 69,5
Error in line 34: 1X6WhZ S789 5,0
Error in line 24: A991 A699 93,8
